syntax = "proto3";
package enrollment;

option java_multiple_files = true;
option java_package = "com.example.enrollment.grpc";
option java_outer_classname = "EnrollmentProto";

message Empty {}

message LoginRequest { string username = 1; string password = 2; }
message LoginResponse { string token = 1; string role = 2; }
message LogoutRequest { string token = 1; }
message LogoutResponse { bool success = 1; }

message Course { string id = 1; string name = 2; uint32 units = 3; bool laboratory = 4; }
message ListCoursesRequest {}
message ListCoursesResponse { repeated Course courses = 1; }

message EnrollRequest { string student_id = 1; string course_id = 2; }
message EnrollResponse { bool success = 1; string message = 2; }

message GetGradesRequest { string student_id = 1; }
message GradeEntry { string course_id = 1; string course_name = 2; string grade = 3; }
message GetGradesResponse { repeated GradeEntry grades = 1; }

message UploadGradeRequest { string student_id = 1; string course_id = 2; string grade = 3; }
message UploadGradeResponse { bool success = 1; }

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}
service CourseService { rpc ListCourses(ListCoursesRequest) returns (ListCoursesResponse); }
service EnrollmentService { rpc Enroll(EnrollRequest) returns (EnrollResponse); }
service GradesService {
  rpc GetGrades(GetGradesRequest) returns (GetGradesResponse);
  rpc UploadGrade(UploadGradeRequest) returns (UploadGradeResponse);
}
